[gd_scene load_steps=5 format=2]

[ext_resource path="res://Icons/Combo1Icon.png" type="Texture" id=1]
[ext_resource path="res://UI/SkillTree-InGameAssassin.gd" type="Script" id=2]
[ext_resource path="res://Skill-Tree/Skill_Tree_TestAssassin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/ImportedSounds/CelebrationEffects/teddy-short-comedy-audio-logo-happy-cartoony-intro-outro-music-145155.mp3" type="AudioStream" id=4]

[node name="SkillTree-InGame" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" parent="." instance=ExtResource( 3 )]

[node name="Combo1" parent="Control/CanvasLayer" index="10"]
texture_normal = ExtResource( 1 )
on_unlocked_texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.236
pitch_scale = 0.9

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="on_learned" from="Control/CanvasLayer/BasicAttack4" to="." method="_on_BasicAttack4_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/BasicAttack3" to="." method="_on_BasicAttack3_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/BasicAttack2" to="." method="_on_BasicAttack2_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/Combo2" to="." method="_on_Combo2_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/Combo3" to="." method="_on_Combo3_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/Clone3" to="." method="_on_Clone3_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/Clone2" to="." method="_on_Clone2_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/Clone1" to="." method="_on_Clone1_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/Combo1" to="." method="_on_Combo1_on_learned"]
[connection signal="on_learned" from="Control/CanvasLayer/BasicAttack1" to="." method="_on_BasicAttack1_on_learned"]

[editable path="Control"]
